--- a/catalog.html
+++ b/catalog.html
@@ -40,10 +40,10 @@
     <main>
       <div class="page-title-container"><h1 class="page-title">Магазин готовых шаблонов</h1></div>
       <div class="container">
-      <div class="middle-part-page">
+        <div class="middle-part-page">
         <section class="filters">
           <h2 class="visually-hidden">Фильтр товаров</h2>
-          <form class="filters" method="get" action="https://echo.htmlacademy.ru">
+          <form method="get" action="https://echo.htmlacademy.ru">
           <fieldset class="filter-item">
             <legend>Стоимость</legend>
             <div class="range-filter">
@@ -61,12 +61,14 @@
             </div>
           </fieldset>
           
-          <fieldset>
+          <fieldset class="net">
             <ul>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="net" id="filter-adapted" value="value-net" checked>
-                <label for="filter-adapted">Адаптивная</label>
-              </li>
+                <label>
+                  <input type="checkbox" checked>
+                  Адаптивная
+                </label>
+              </li></label>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-radio" type="radio"name="net" id="filter-fixed"  value="value-fixed">
                 <label for="filter-fixed">Фиксированная</label>   
@@ -78,12 +80,43 @@
             </ul>
             </fieldset>
             
-            <fieldset>
+            <fieldset class="features">
             <legend>Особенности:</h2></legend>
             <ul>
+              <li>
+                <label class="check option">
+                  <input class="check_input" type="checkbox">
+                  <span class="check_box"></span>
+                  Первый
+              </label>  
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="features" value="slider" id="filter-slider" checked>
-                <label for="filter-slider">Слайдер</label>
+                <label class="check option">
+                  <input class="check_input" type="checkbox" checked>
+                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="23px" height="23px" viewBox="0 0 23 23" enable-background="new 0 0 23 23" xml:space="preserve">
+<path d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3
+	C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z"/>
+</svg><span class="check_box"></span>
+                  Второй 
+              </label>  
+              <li class="filter-option">
+                <label class="check option">
+                  <input class="check_input" type="checkbox" disabled>
+                  <span class="check_box"></span>
+                  Третий
+              </label>  
+              <li class="filter-option">
+                <label class="check option">
+                  <input class="check_input" type="checkbox" checked disabled>
+                  <span class="check_box"></span>
+                  Четвёртый
+              </label>  
+
+
+
+
+
+
               </li>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="features" value="advantages" id="filter-advanteges">
@@ -107,18 +140,20 @@
           </form>
         </section>
 
-      <section class="catalog">
+        <section class="catalog">
         <h2 class="visually-hidden">Карточки товаров</h2>
           <ul class="catalog-list-page-catalog"> 
             <li class="catalog-item-page-catalog">
+              <img src="img/browser.svg" width="360" height="40" alt="Верхняя часть карточки товара">
               <img src="img/img-sedona-jpg.jpg" width="360" height="576" alt="Главная страница сайта туристической фирмы">
-                <div class="card visually-hidden">
+                <div class="card,3,3">
                    <a href="#"><h3 class="card-title">Sedona</h3></a>
                    <p class="card-information">Информационный сайт<br>для туристов</p>
                    <span class="card-button"><br>9900 руб.</span>
                 </div>
             </li>
             <li class="catalog-item-page-catalog">
+              <img src="img/browser.svg" width="360" height="40" alt="Верхняя часть карточки товара">
               <img src="img/img-pink-jpg.jpg" width="360" height="576" alt="Главная страница сайта фирмы фотофильтров для смартфона">
               <div class="card">
                 <a href="#"><h3 class="card-title">Pink app</h3></a>
@@ -127,6 +162,7 @@
               </div>
             </li>
             <li class="catalog-item-page-catalog">
+              <img src="img/browser.svg" width="360" height="40" alt="Верхняя часть карточки товара">
               <img src="img/img-barbershop-jpg.jpg" width="360" height="576" alt="Главная страница сайта Барбершоп Бородинский">
               <div class="card">
                 <a href="#"><h3 class="card-title">Barbershop</h3></a>
@@ -135,6 +171,7 @@
               </div>
             </li>
             <li class="catalog-item-page-catalog">
+              <img src="img/browser.svg" width="360" height="40" alt="Верхняя часть карточки товара">
               <img src="img/img-mishka-jpg.jpg" width="360" height="576" alt="Главная страница сайта магазина вязаных корзинок">
               <div class="card">
                 <a href="#"><h3 class="card-title">Mishka</h3></a>
@@ -143,6 +180,7 @@
               </div>
             </li>
             <li class="catalog-item-page-catalog">
+              <img src="img/browser.svg" width="360" height="40" alt="Верхняя часть карточки товара">
               <img src="img/img-aplus-jpg.jpg" width="360" height="576" alt="Главная страница сайта ВУЗа">
               <div class="card">
                 <a href="#"><h3 class="card-title">A plus</h3></a>
@@ -151,6 +189,7 @@
               </div>
             </li>
             <li class="catalog-item-page-catalog">
+              <img src="img/browser.svg" width="360" height="40" alt="Верхняя часть карточки товара">
               <img src="img/img-kvast-jpg.jpg" width="360" height="576" alt="Главная страница сайта крафтового кваса">
               <div class="card">
                 <a href="#"><h3 class="card-title">Кваст</h3></a>
