--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
         <ul class="user-navigation">
           <li><a class="basket-link" href="#"> <svg class="basket" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            width="15px" height="15px" viewBox="0 0 15 15" enable-background="new 0 0 15 15" xml:space="preserve">
+            width="15px" height="15px" viewBox="0 0 15 15" enable-background="new 0 0 15 15" xml:space="preserve" fill="#a6a6a6">
          <g>
            <circle cx="4.5" cy="13.5" r="1.5"/>
            <circle cx="12.5" cy="13.5" r="1.5"/>
